--- a/signin.html
+++ b/signin.html
@@ -24,20 +24,21 @@
             <a href="/index.html"><p>A<br>G</p></a>
         </section>        
     <div class="formflex">
-        <div class="formcontainer">
+        <form action="#" class="formcontainer">
             <div class="title">Formularz logowania</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-user"></i></span>
-            <input type="text" class="input" placeholder="nazwa użytkownika">
+            <input type="text" class="input userID" placeholder="nazwa użytkownika">
             </div>
             <div class="error">błędna nazwa użytkownika</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-lock"></i></span>
-            <input type="password" class="input" placeholder="hasło">
+            <input type="password" class="input password" placeholder="hasło">
             </div>
             <div class="error">błędne hasło</div>
             <input class="approve" type="submit" value="zaloguj">
-            </div>
+        </form>
         </div>
+        <script src="/script/signup-sigin.js"></script>
 </body>
 </html>
