--- a/signup.html
+++ b/signup.html
@@ -24,30 +24,34 @@
             <a href="/index.html"><p>A<br>G</p></a>
         </section>        
     <div class="formflex">
-        <div class="formcontainer">
+        <form action="#" class="formcontainer">
             <div class="title">Formularz rejstracji</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-user"></i></span>
-            <input type="text" class="input" placeholder="nazwa użytkownika">
+            <input type="text" class="input userId" placeholder="nazwa użytkownika">
             </div>
-            <div class="error">błędna nazwa użytkownika</div>
+            <div class="error usererror">błędna nazwa użytkownika</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-envelope"></i></span>
-            <input type="email" class="input" placeholder="email">
+            <input type="email" class="input email" placeholder="email">
             </div>
-            <div class="error">błędny adres email</div>
+            <div class="error emailerror">błędny adres email</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-envelope"></i></span>
-            <input type="email" class="input" placeholder="potwierdź email">
+            <input type="email" class="input cemail" placeholder="potwierdź email">
             </div>
-            <div class="error">błędny adres email</div>
+            <div class="error cemailerror">błędny adres email</div>
             <div class="icontextgrup">
             <span class="icon"><i class="fas fa-lock"></i></span>
-            <input type="password" class="input" placeholder="hasło">
+            <input type="password" class="input password" placeholder="hasło">
             </div>
-            <div class="error">błędne hasło</div>
-            <input class="approve" type="submit" value="zarejstruj">
-            </div>
+            <div class="error passworderror">błędne hasło</div>
+            <input class="approve button" type="submit" value="zarejstruj">
+            </form>
         </div>
+        </div>
+
+        <script src="/script/new.js"></script>
+
 </body>
 </html>
